--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="titleProject">RODRIBOOK WEBSITE</div>
                             <div class="descriptionProject">Recreación del famoso sitio. Previo registro e inicio de sesión, los usuarios pueden acceder a un muro público para escribir mensajes, así como acceder de manera privada a su información de usuario y editarla. </div>
                             <div class="linksProject">
-                                <a href="" class="btnSvg">
+                                <a href="" class="btnSvg" target="_blank">
                                     <span class="logoGit">REPOSITORIO</span>
                                     <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"></path></svg>
                                 </a>
@@ -159,7 +159,7 @@
                                 <div class="titleProject">BLACKJACK GAME</div>
                                 <div class="descriptionProject">Juego de blackjack que tomé como base del sitio <strong><a href="https://www.youtube.com/watch?v=jS4aFq5-91M&t=14359s">Free Code Camp</a></strong>, y que luego fui adaptando: notificaciones sobre el estado de la partida, un bot dealer, interfaz para realizar apuestas, etc. </div>
                                 <div class="linksProject">
-                                    <a href="https://github.com/CarelessAsado/jackblack" class="btnSvg">
+                                    <a href="https://github.com/CarelessAsado/jackblack" class="btnSvg" target="_blank">
                                         <span class="logoGit">REPOSITORIO</span>
                                         <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"></path></svg>
                                     </a>
@@ -200,7 +200,7 @@
                             <div class="titleProject">ROHELAW WEBSITE</div>
                             <div class="descriptionProject">Mi primer sitio web.</div>
                             <div class="linksProject">
-                                <a href="https://github.com/CarelessAsado/CarelessAsado.github.io" class="btnSvg">
+                                <a href="https://github.com/CarelessAsado/CarelessAsado.github.io" class="btnSvg" target="_blank">
                                     <span class="logoGit">REPOSITORIO</span>
                                     <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"></path></svg>
                                 </a>
