--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <a  href="#skills" id="skillsHover">
-                        Conocimientos
+                        Tecnologías
                     </a>
                 </li>
                 <li>                    
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <section id="intro">
-        <video class="videoIntro" src="/vid/codingblurry.mp4" autoplay="true" loop="true"></video>
+        <video class="videoIntro" src="/vid/codingblurry.mp4" autoplay loop></video>
         <div class="bannerText">
             <h1> <span class="izq">Rodrigo</span> <span class="centro">Hernán</span> <span class="dcha">López</span> </h1> 
             <h2 >Programador web full-stack</h2>
