--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://kit.fontawesome.com/ec87a17681.js" crossorigin="anonymous"></script>
     <title>Rodrigo Hernán López</title>
 </head>
-<body>
-      
+<body> 
     <nav>
         <div class="nav-center">
             <nav-header class="espaciar">
@@ -61,7 +60,11 @@
             <p> <a href="#proyectos">Ver mis proyectos></a></p>
         </div>
     </section>
- 
+    <!-- LOGO WHATSAPP VOLADOR -->
+    <a href="https://wa.me/33786053233?text=Hola Rodrigo" target="_blank"> 
+        <img id="whatsappLogo" src="/img/whatsapp.png" alt="">
+    </a>
+    
     <div id="backBone">
         <div class="franja"></div>
         <div class="franja"></div>
@@ -115,7 +118,7 @@
                             <div class="titleProject">RODRIBOOK WEBSITE</div>
                             <div class="descriptionProject">Recreación del famoso sitio. Previo registro e inicio de sesión, los usuarios pueden acceder a un muro público para escribir mensajes, así como acceder de manera privada a su información de usuario y editarla. </div>
                             <div class="linksProject">
-                                <a href="" class="btnSvg" target="_blank">
+                                <a href="https://github.com/CarelessAsado/rodribook" class="btnSvg" target="_blank">
                                     <span class="logoGit">REPOSITORIO</span>
                                     <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"></path></svg>
                                 </a>
@@ -291,9 +294,6 @@
             </div>
         </div>
     </section>
-<!--     <footer id="footer">
-        contacto@rodrigohernanlopez.com.ar |<span> Rodrigo Hernán López </span> 
-    </footer> -->
     <!-- JS COMPONENTS -->    
     <script src="./index.js"></script>
 
