--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <!-- con aspiraciones a devenir  -->
                 <h3><span>Traductor público</span> con una pizca de <span>programador</span>.</h3>
                 <p>Trabajo como traductor público de inglés desde el 2013. Con motivo de la pandemia decidí aprovechar para redireccionar mi carrera hacia un sector que me permitiera explorar desafíos con mayor creatividad.</p> 
-                <p>La programación fue la rama que captó mi atención y mi desenvoltura en idiomas facilitó dicha transición. Gracias a los cursos de <span class="freeWilly">Free Code Camp</span> logré obtener las certificaciones de frontend y <span class="Js">Javascript</span>.  Actualmente estoy finalizando la certificación de <span>MongoDb</span> y <span>Nodejs</span>.</p>
+                <p>La programación fue la rama que captó mi atención y mi desenvoltura en idiomas facilitó dicha transición. Gracias a los cursos de <span class="freeWilly">Free Code Camp</span> logré obtener las certificaciones de frontend y <span class="Js">Javascript</span>.  Actualmente estoy finalizando la certificación de <span>MongoDb</span> y <span>Nodejs</span>, y comenzando a interiorizarme en <span class="freeWilly">React</span>.</p>
                 <p> Autodidacta por naturaleza, me encanta aprender y superarme cada día.</p>
                 <p><a class="blue" href="./cv/CV español 2021.pdf" download> Conocé más sobre mí.</a></p>
             </div>
