--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         </header>
         <div class="aboutContainer">
             <div class="aboutGridIzq">
-                <!-- con aspiraciones a devenir  -->
-                <h3><span>Traductor público</span> y <span>programador</span>.</h3>
+                <h3><span>Traductor público y programador.</span></h3>
                 <p>Me desempeño como traductor público de inglés desde el 2013. Con motivo de la pandemia decidí aprovechar para redireccionar mi carrera hacia un sector que me permitiera explorar desafíos con mayor creatividad.</p> 
                 <p>La programación fue la rama que captó mi atención y mi desenvoltura en idiomas facilitó dicha transición. Gracias a los cursos de <span class="freeWilly">Free Code Camp</span> logré obtener las certificaciones de frontend y <span class="Js">Javascript</span>.  Actualmente estoy finalizando la certificación de <span>MongoDb</span> y <span>Nodejs</span>, y comenzando con <span class="freeWilly">React</span>.</p>
                 <p> Autodidacta por naturaleza, me encanta aprender y superarme cada día.</p>
