--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="aboutContainer">
             <div class="aboutGridIzq">
                 <!-- con aspiraciones a devenir  -->
-                <h3><span>Traductor público</span> con una pizca de <span>programador</span>.</h3>
+                <h3><span>Traductor público</span> y <span>programador</span>.</h3>
                 <p>Trabajo como traductor público de inglés desde el 2013. Hace un año, decidí redireccionar mi carrera profesional hacia un sector que me permitiera explorar desafíos con mayor creatividad.</p> 
                 <p>La programación fue la rama que captó mi atención y mi desenvoltura en idiomas facilitó dicha transición. Gracias a los cursos de <span class="freeWilly">Free Code Camp</span> logré obtener las certificaciones de frontend y <span class="Js">Javascript</span>.  Actualmente estoy realizando proyectos con <span>MongoDb</span>, <span>Nodejs</span>, y <span class="freeWilly">React</span>.</p>
                 <p> Autodidacta por naturaleza, me encanta aprender y superarme cada día.</p>
