--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Rodrigo Hernán López</title>
 </head>
 <body> 
+        <div class="lds-dual-ring" id="preloader"></div>
     <nav>
         <div class="nav-center">
             <nav-header class="espaciar">
@@ -74,6 +75,7 @@
         <div class="franja"></div>
         <div class="franja"></div>
     </div>
+
     <section id="about">
         <header class="aboutHeader">
             <p ><em> "Mucho gusto, me llamo Rodrigo"</em></p>
